# dishtayantra

./: .gitignore  HANDOVER.md  LICENSE  NEW_SESSION_PROMPT.md  QUICKSTART.md  QUICKSTART_v1.5.2.md  QUICKSTART_v1.6.0.md  QUICKSTART_v1.7.0.md  README.md  _repro_pool.py  requirements.txt  run_server.py  setup_directories.py
benchmarks/: README.md  __init__.py  a1_vertical.py  arrow_trade_calculators.py  arrow_vectorization_spike.py  freethreading_spike.py  harness.py  nexmark_calculators.py  nexmark_workload.py  run_benchmark.py  workloads.py
config/: alerts.example.json  application.properties  application.yaml  cpp_config.json  jvm_config.json  rust_config.json  users.json  worker_config.json
core/: __init__.py  alerts.py  audit_log.py  audit_retention.py  config_parsers.py  core_utils.py  flow_recorder.py  flow_retention.py  flow_store.py  flow_store_aerospike.py  flow_store_paimon.py  flow_store_sql.py  log_config.py  properties_accessors.py  properties_configurator.py  replay.py  user_registry.py  version.py
cpp/: CMakeLists.txt
cpp/src/: calculator.hpp  dishtayantra_cpp.cpp
data/: inmemory_redisclone.json
docker/: DOCKERFILE  alert_rules.yml  docker_compose.yml  grafana_dashboard.json  prometheus.yml
docs/: ARCHITECTURE.md  ActiveMQ DataPublisher and DataSubscriber Setup Guide.md  Aerospike DataPublisher Setup Guide.md  AutoClone - Visual Guide.md  AutoClone Feature - Complete Documentation.md  BATCH_FILE_PROCESSING.md  CHANGELOG.md  CODE_COMMENTING_STANDARD.md  COMPLETE_IMPLEMENTATION.md  CONFIG_AND_CLOUD.md  CONFIG_AND_CLOUD_v2.2.md  Cache Management Implementation.md  DB Connection Pool Manager.md  DB Connection Pool.md  DOC_AUDIT_5_35_1.md  Enterprise Pipeline 50 Nodes - Quick Reference.md  File DataPublisher and DataSubscriber Setup Guide.md  HEADLESS_AND_ORCHESTRATION.md  In-Memory DataPublisher and DataSubscriber Setup Guide.md  InMemoryPubSub Manager Comprehensive Guide.md  Kafka DataPublisher and DataSubscriber Setup Guide.md  MULTI_INSTANCE.md  Multi-Role User System - Implementation Summary.md  PROJECT_COMPLETE.md  QUICKSTART.md  REST DataPublisher and DataSubscriber Setup Guide.md  ROADMAP.md  RabbitMQ DataPublisher and DataSubscriber Setup Guide.md  Redis DataPublisher and DataSubscriber Setup Guide.md  Resilient AciveMQ.md  Resilient Kafka.md  Resilient Rabbit.md  Resilient Redis.md  Resilient TibcoEMS.md  Resilient WebsphereMQ.md  SQL DataPublisher and DataSubscriber Setup Guide.md  TIBCO EMS DataPublisher and DataSubscriber Setup Guide.md  TUTORIAL_01_first_dag.md  TUTORIAL_02_pipeline.md  TUTORIAL_03_full_feature.md  (+14 more)
example/: subgraph_demo.py  trade_topic_generator.py
example/lmdb_calculators/: Cargo.toml  JavaLMDBCalculator.java  README.md  __init__.py  cpp_lmdb_calculator.cpp
examples/: demo_db_connection_pool.py  demo_db_pool_manager.py  demo_inmemory_redisclone.py
java/: build.sh
perftest/: README.md  _fake_worker.py  array_trade_calculators.py  arrow_etl_calculators.py  arrow_trade_etl_calculators.py  arrow_trade_nodes.py  bench_flow_queries.py  bench_flow_recorder.py  eod_enrichment_calculators.py  etl_calculators.py  generate_trades.py  perftest_arrow_autobatch.json  perftest_arrow_etl.json  perftest_arrow_mixed.json  perftest_arrow_transport.json  (+12 more)
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
(+538 files in other folders)
