[package]
name = "dishtayantra_rust"
version = "1.7.0"
edition = "2021"
authors = ["Ashutosh Sinha"]
description = "High-performance memory-safe Rust calculators for DishtaYantra v1.7.0"
license = "Proprietary"

[lib]
name = "dishtayantra_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
chrono = "0.4"
rayon = "1.8"
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
